projects/nx/src/apps/home-dashboard/security/allow-from-traefik.networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-traefik
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow ingress traffic from Traefik ingress controller to Glance pods.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - traefik-system
          podSelector:
            matchExpressions: # NOTE: This is a workaround to avoid Kustomization `labels` being applied to the NetworkPolicy
              - key: app.kubernetes.io/name
                operator: In
                values: [traefik]
      ports:
        - port: 8080
          protocol: TCP
