projects/nx/src/apps/home-dashboard/security/allow-to-cluster.networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-traefik
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow ingress traffic from Traefik ingress controller to Glance pods.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
          protocol: TCP
