projects/nx/src/apps/home-dashboard/security/allow-to-internet.networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-internet
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow egress traffic from Glance pods to external networks for DNS and HTTP/HTTPS.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
